[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqtt-mcp-server"
version = "1.0.0"
description = "MCP Server for MQTT operations using FastMCP framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "ISC"}
keywords = ["mcp", "model-context-protocol", "mqtt", "fastmcp"]
authors = [
    {name = "MQTT MCP Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "paho-mqtt>=1.6.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort", 
    "flake8",
    "pytest",
    "pytest-asyncio"
]

[project.scripts]
mqtt-mcp-server = "server:main"

[project.urls]
Homepage = "https://github.com/yourusername/mqtt-mcp-server"
Repository = "https://github.com/yourusername/mqtt-mcp-server.git"
Issues = "https://github.com/yourusername/mqtt-mcp-server/issues"

[tool.setuptools]
py-modules = ["server"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
